<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- take photo -->
    <string name="photo_choose_title">How to choose picture</string>
    <string name="btn_positive_name_gallery">From Gallery</string>
    <string name="btn_negative_name_camera">Take a photo</string>
    <string name="can_not_use_storage">Please check your storage read/write authority!</string>

    <!-- 我的 -->
    <string name="fragment_my__text_account">Account</string>
    <string name="fragment_my__text_level">Level</string>
    <string name="fragment_my__btn_title_login">Login</string>
    <string name="fragment_my__btn_title_score">Score</string>
    <string name="fragment_my__btn_title_feedback">Feedback</string>
    <string name="fragment_my__btn_title_about">About</string>
    <string name="fragment_my__btn_title_share">Share</string>
    <string name="fragment_my__btn_title_accumulate">Accumulate</string>
    <string name="fragment_my__btn_title_settings">Settings</string>
    <string name="fragment_my__btn_title_logout">Logout</string>
    <string name="fragment_my__tip_sign_in_success">Sign in Success</string>
    <string name="fragment_my__tip_exit">exit account?</string>

    <!-- 评分 -->
    <string name="dialog_fragment_score__text_title">Title:</string>
    <string name="dialog_fragment_score__hint_title">Please input title&#8230;</string>
    <string name="dialog_fragment_score__text_content">Content:</string>
    <string name="dialog_fragment_score__hint_content">Please input content&#8230;</string>
    <string name="dialog_fragment_score__invoke_success_result">Thanks for your comments</string>

    <!-- 反馈 -->
    <string name="dialog_fragment_feedback__text_content">Content:</string>
    <string name="dialog_fragment_feedback__hint_content">Please input content&#8230;</string>
    <string name="dialog_fragment_feedback__text_image">Select a Picture:</string>
    <string name="dialog_fragment_feedback__invoke_success_result">Thanks for your comments</string>

    <!-- 关于 -->
    <string name="activity_about__title">About</string>
    <string name="activity_about__btn_title_versions">Versions</string>
    <string name="activity_about__btn_title_service_agreement">Service Agreement</string>
    <string name="activity_about__btn_title_privacy_right_policy">Privacy Right Policy</string>

    <!-- 设置 -->
    <string name="activity_settings__title">Settings</string>
    <string name="activity_settings__btn_title_account_and_security">Account and Security</string>

    <!-- 账号与安全 -->
    <string name="activity_account_and_security__title">@string/activity_settings__btn_title_account_and_security</string>
</resources>
