<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/form_container_out">

    <LinearLayout style="@style/form_container_in">

        <LinearLayout
            style="@style/input_container"
            android:gravity="center_vertical|center_horizontal">

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="40dp"
                android:minHeight="40dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />

        </LinearLayout>

        <LinearLayout style="@style/input_container">

            <TextView
                style="@style/input_text"
                android:text="@string/dialog_fragment_score__text_title" />

            <EditText
                android:id="@+id/title"
                style="@style/input_input"
                android:hint="@string/dialog_fragment_score__hint_title"
                android:inputType="text"
                android:maxLength="32"
                tools:ignore="Autofill" />

        </LinearLayout>

        <LinearLayout style="@style/input_container">

            <TextView
                style="@style/input_text"
                android:text="@string/dialog_fragment_score__text_content" />

            <EditText
                android:id="@+id/content"
                style="@style/input_input"
                android:hint="@string/dialog_fragment_score__hint_content"
                android:inputType="text"
                android:maxLength="1024"
                tools:ignore="Autofill" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/form_button_container">

        <Button
            android:id="@+id/btn"
            style="@style/button_button"
            android:text="@string/dlg_btn_positive_name_submit" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loading"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="BallClipRotateIndicator" />

    </LinearLayout>

</RelativeLayout>
