<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="22dp">

        <LinearLayout
            android:id="@+id/layout_beforeLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#17C400"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/fragment_my__btn_title_login"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_afterLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/view_photo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/no_photo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="4"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textColor="#353535"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/fragment_my__text_account"
                        android:textColor="#afafaf"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="："
                        android:textColor="#afafaf"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/loginName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textColor="#afafaf"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/fragment_my__text_level"
                        android:textColor="#afafaf"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="："
                        android:textColor="#afafaf"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />

                    <LinearLayout
                        android:id="@+id/layout_level"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_btn_sign_in"
                    tools:ignore="ContentDescription" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/btn_signIn_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    app:indicatorColor="#3cb2ef"
                    app:indicatorName="BallScaleRippleMultipleIndicator" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:firstItem="true"
        app:icon="@drawable/ic_btn_score"
        app:text="@string/fragment_my__btn_title_score" />

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_btn_feedback"
        app:text="@string/fragment_my__btn_title_feedback" />

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_btn_about"
        app:text="@string/fragment_my__btn_title_about" />

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_btn_share"
        app:lastItem="true"
        app:text="@string/fragment_my__btn_title_share" />

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_accumulate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:firstItem="true"
        app:icon="@drawable/ic_btn_accumulate"
        app:text="@string/fragment_my__btn_title_accumulate" />

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_btn_settings"
        app:lastItem="true"
        app:text="@string/fragment_my__btn_title_settings" />

    <com.lichkin.framework.app.android.widget.ListItem
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:firstItem="true"
        app:icon="@drawable/ic_btn_logout"
        app:lastItem="true"
        app:text="@string/fragment_my__btn_title_logout" />

</LinearLayout>